--- a/Example 1 - Using Loop's Sources.ipynb
+++ b/Example 1 - Using Loop's Sources.ipynb
@@ -22,7 +22,15 @@
    "outputs": [],
    "source": [
     "#if not already installed:\n",
-    "#!conda install -c loop3d map2loop loopstructural pyamg meshio"
+    "#!conda install -c loop3d map2loop loopstructural pyamg meshio\n",
+    "#!pip install loopstructuralvisualisation[jupyter]\n",
+    "\n",
+    "# note on versions:\n",
+    "\n",
+    "## map2loop version = v3.2.0\n",
+    "## LoopStructural version = 1.6.4\n",
+    "## LoopProjectFile = 0.2.2\n",
+    "## loopstructural-visualisation = 0.1.10"
    ]
   },
   {
@@ -35,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,42 +107,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: 2024-12-17 15:05:06,980: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
+      "C:\\Users\\angel\\anaconda3\\envs\\ls\\Lib\\site-packages\\map2loop\\__init__.py:112: UserWarning: dependencies.txt not found. No dependencies checked for map2loop.\n",
+      "  warnings.warn(\n",
+      "WARNING: 2024-12-17 16:05:31,596: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
       "\n",
-      "WARNING: 2024-12-17 15:05:13,227: interpolators.py:352 -- Detected 12 collocated point clusters. Aggregating these points.\n",
+      "WARNING: 2024-12-17 16:05:38,012: interpolators.py:352 -- Detected 12 collocated point clusters. Aggregating these points.\n",
       " \n",
-      "WARNING: 2024-12-17 15:05:19,427: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Jeerinah_Formation and Bunjinah_Formation\n",
+      "WARNING: 2024-12-17 16:05:44,907: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Jeerinah_Formation and Bunjinah_Formation\n",
       "\n",
-      "WARNING: 2024-12-17 15:05:19,427: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Bunjinah_Formation and Pyradie_Formation\n",
+      "WARNING: 2024-12-17 16:05:44,907: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Bunjinah_Formation and Pyradie_Formation\n",
       "\n",
-      "WARNING: 2024-12-17 15:05:19,427: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Pyradie_Formation and Fortescue_Group\n",
+      "WARNING: 2024-12-17 16:05:44,907: thickness_calculator.py:407 -- Thickness Calculator InterpolatedStructure: Cannot calculate thickness between Pyradie_Formation and Fortescue_Group\n",
       "\n",
-      "WARNING: 2024-12-17 15:05:19,645: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n",
-      "c:\\Users\\angel\\anaconda3\\envs\\m2l1\\Lib\\site-packages\\pandas\\core\\series.py:1031: RuntimeWarning: invalid value encountered in cast\n",
+      "WARNING: 2024-12-17 16:05:45,185: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n",
+      "C:\\Users\\angel\\anaconda3\\envs\\ls\\Lib\\site-packages\\pandas\\core\\series.py:1031: RuntimeWarning: invalid value encountered in cast\n",
       "  arr = np.asarray(values, dtype=dtype)\n"
      ]
     }
    ],
    "source": [
-    "import time\n",
     "import os\n",
     "from map2loop.project import Project\n",
     "from map2loop.m2l_enums import VerboseLevel, Datatype\n",
     "from map2loop.sorter import SorterAlpha, SorterAgeBased, SorterUseHint, SorterUseNetworkX, SorterMaximiseContacts, SorterObservationProjections\n",
     "from map2loop.thickness_calculator import ThicknessCalculatorAlpha, InterpolatedStructure, StructuralPoint\n",
     "from map2loop.sampler import SamplerSpacing\n",
-    "from datetime import datetime\n",
     "\n",
-    "# os.environ[\"DOCUMENTATION_TEST\"] = \"True\"\n",
-    "\n",
-    "t0 = time.time()\n",
     "\n",
     "# Set the region of interest for the project\n",
     "bbox_3d = {\n",
@@ -195,9 +200,7 @@
     "    'Fortescue_Group',\n",
     "    # oldest\n",
     "]\n",
-    "proj.run_all(user_defined_stratigraphic_column=column)\n",
-    "\n",
-    "t1 = time.time()"
+    "proj.run_all(user_defined_stratigraphic_column=column)"
    ]
   },
   {
@@ -209,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -250,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -282,15 +285,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING: 2024-12-17 13:34:13,362: __init__.py:86 -- Surfe is not installed, SurfeRBFInterpolator will not be available\n",
-      "ERROR: 2024-12-17 13:34:35,769: process_data.py:446 -- Thickness for Bunjinah_Formation is less than or equal to 0\n",
-      " Update the thickness value for Bunjinah_Formation before continuing\n",
-      "ERROR: 2024-12-17 13:34:35,771: process_data.py:446 -- Thickness for Turee_Creek_Group is less than or equal to 0\n",
-      " Update the thickness value for Turee_Creek_Group before continuing\n",
-      "ERROR: 2024-12-17 13:34:35,829: process_data.py:446 -- Thickness for Bunjinah_Formation is less than or equal to 0\n",
-      " Update the thickness value for Bunjinah_Formation before continuing\n",
-      "ERROR: 2024-12-17 13:34:35,829: process_data.py:446 -- Thickness for Turee_Creek_Group is less than or equal to 0\n",
-      " Update the thickness value for Turee_Creek_Group before continuing\n"
+      "WARNING: 2024-12-17 16:05:48,248: __init__.py:86 -- Surfe is not installed, SurfeRBFInterpolator will not be available\n"
      ]
     }
    ],
@@ -319,17 +314,89 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Turee_Creek_Group': inf,\n",
+       " 'Boolgeeda_Iron_Formation': 436.53165648221125,\n",
+       " 'Woongarra_Rhyolite': 620.048633031626,\n",
+       " 'Weeli_Wolli_Formation': 446.2193181653078,\n",
+       " 'Brockman_Iron_Formation': 861.1421464230768,\n",
+       " 'Mount_McRae_Shale_and_Mount_Sylvia_Formation': 240.25476954067562,\n",
+       " 'Wittenoom_Formation': 486.0072783721006,\n",
+       " 'Marra_Mamba_Iron_Formation': 332.4297770640236,\n",
+       " 'Jeerinah_Formation': 991.8848915029621,\n",
+       " 'Bunjinah_Formation': -1.0}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "processedData.thicknesses['Pyradie_Formation'] = 600\n",
     "processedData.thicknesses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 2024-12-17 16:05:54,366: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:54,379: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 16:05:54,491: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:54,506: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 16:05:54,628: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:54,638: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 16:05:54,749: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:54,749: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 16:05:54,867: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:54,885: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 16:05:55,047: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:55,057: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 16:05:55,174: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:55,190: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n",
+      "WARNING: 2024-12-17 16:05:55,293: _fault_builder.py:153 -- No orientation data for fault\n",
+      "                    Defaulting to a dip of 90vertical fault\n",
+      "WARNING: 2024-12-17 16:05:55,305: _fault_builder.py:208 -- There is no slip vector data for the fault, using vertical slip vector\n",
+      "                          projected onto fault surface estimating from fault normal\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d02213af844a447180d25472a62cefc7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/25 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "processedData.foliation_properties['sg'] = foliation_params\n",
     "processedData.fault_properties['interpolatortype'] = fault_params['interpolatortype']\n",
@@ -342,9 +409,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6ceb06e2e9a24819b158f7f5e0cd6d28",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:52050/index.html?ui=P_0x24a6ad6de10_0&reconnect=auto\" class=\"pyvis…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "view = Loop3DView(model)\n",
     "view.plot_model_surfaces()\n",
