--- a/Example 5 - Creating our own thickness calculator.ipynb
+++ b/Example 5 - Creating our own thickness calculator.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
     "    # Name this sorter in the init function\n",
     "    # Add a variable for the fixed thickness value\n",
     "    def __init__(self, thickness=100):\n",
-    "        self.sorter_label = \"ThicknessCalculatorFixed\"\n",
+    "        self.thickness_calculator_label = \"ThicknessCalculatorFixed\"\n",
     "        self.default_thickness = thickness\n",
     "\n",
     "    # The structure of the sort function MUST match the Sorter sort function as it is\n",
@@ -64,7 +64,9 @@
     "        # The output of this function is the units pandas.dataframe\n",
     "        # in this example we use the fixed value given at init\n",
     "        output_units = units.copy()\n",
-    "        output_units['thickness'] = self.default_thickness\n",
+    "        output_units['ThicknessMean'] = self.default_thickness\n",
+    "        output_units['ThicknessMedian'] = self.default_thickness\n",
+    "        output_units['ThicknessStdDev'] = self.default_thickness\n",
     "        return output_units"
    ]
   },
@@ -77,9 +79,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 2024-12-17 16:13:54,514: mapdata.py:466 -- Datatype FOLD is not set and so cannot be loaded\n",
+      "\n",
+      "WARNING: 2024-12-17 16:13:54,530: mapdata.py:466 -- Datatype FAULT_ORIENTATION is not set and so cannot be loaded\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "from map2loop.project import Project\n",
@@ -87,12 +100,8 @@
     "from map2loop.m2l_enums import Datatype\n",
     "from map2loop.sampler import SamplerSpacing, SamplerDecimator\n",
     "from map2loop.sorter import SorterUseHint, SorterUseNetworkX, SorterAgeBased, SorterAlpha\n",
-    "import time\n",
     "\n",
-    "from datetime import datetime\n",
-    "nowtime=datetime.now().isoformat(timespec='minutes')   \n",
-    "model_name=nowtime.replace(\":\",\"-\").replace(\"T\",\"-\")\n",
-    "loop_project_filename = os.path.join(model_name, \"local_source.loop3d\")\n",
+    "loop_project_filename = \"local_source.loop3d\"\n",
     "\n",
     "# Specify the boundary of the region of interest in the appropriate projection coordinates\n",
     "bounding_box = {\n",
@@ -103,16 +112,26 @@
     "    \"base\": -3200,\n",
     "    \"top\": 1200,\n",
     "}\n",
+    "\n",
+    "config = {\n",
+    "  \"structure\" : {\n",
+    "    \"dipdir_column\": \"azimuth2\",\n",
+    "    \"dip_column\": \"dip\",},\n",
+    "  \"geology\" : {\n",
+    "    \"unitname_column\": \"unitname\",\n",
+    "    \"alt_unitname_column\": \"code\"}, \n",
+    "  \"fault\": {\n",
+    "      \"minimum_fault_length\": 0}\n",
+    "}\n",
     "# Initialise the project with the shapefiles, dtm, config file\n",
     "# output locations and projection to work in\n",
     "proj = Project( \n",
-    "    geology_filename = \"./source_data/geol_clip.shp\",\n",
+    "    geology_filename = \"./source_data/geol_clip_no_gaps.shp\",\n",
     "    fault_filename = \"./source_data/faults_clip.shp\",\n",
     "    structure_filename = \"./source_data/structure_clip.shp\",\n",
     "    dtm_filename = './source_data/dtm_rp.tif',\n",
-    "    config_filename = './source_data/example.hjson',\n",
+    "    config_dictionary = config, \n",
     "    clut_filename = './source_data/500kibg_colours.csv',\n",
-    "    clut_file_legacy = True,\n",
     "    verbose_level = VerboseLevel.NONE,\n",
     "    tmp_path = model_name,\n",
     "    working_projection = \"EPSG:28350\",\n",
@@ -134,7 +153,7 @@
     "proj.map_data.config.geology_config[\"intrusive_text\"] = \"mafic intrusive\"\n",
     "\n",
     "# Set specific layers from the geology map to be ignored (commonly \"cover\" or \"water\")\n",
-    "proj.set_ignore_codes([\"cover\", \"Fortescue_Group\", \"A_FO_od\"])"
+    "proj.set_ignore_lithology_codes([\"cover\", \"Fortescue_Group\", \"A_FO_od\"])"
    ]
   },
   {
@@ -146,9 +165,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: 2024-12-17 16:13:57,869: project.py:659 -- No fault orientation data found, skipping fault orientation calculation\n",
+      "ERROR: 2024-12-17 16:13:57,954: project.py:754 -- \n",
+      "There is an existing 'local_source.loop3d' with the same name as specified in project. map2loop process may fail. Set 'overwrite_loopprojectfile' to True to avoid this\n"
+     ]
+    }
+   ],
    "source": [
     "# This step sets the newly created sorter as the one map2loop will use\n",
     "proj.set_thickness_calculator(ThicknessCalculatorFixed(50))\n",
@@ -164,11 +193,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>ThicknessCalculatorFixed_mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Boolgeeda_Iron_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Brockman_Iron_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Bunjinah_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Turee_Creek_Group</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Weeli_Wolli_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Jeerinah_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Pyradie_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Woongarra_Rhyolite</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Marra_Mamba_Iron_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Mount_McRae_Shale_and_Mount_Sylvia_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Wittenoom_Formation</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            name  \\\n",
+       "0                       Boolgeeda_Iron_Formation   \n",
+       "1                        Brockman_Iron_Formation   \n",
+       "2                             Bunjinah_Formation   \n",
+       "3                              Turee_Creek_Group   \n",
+       "4                          Weeli_Wolli_Formation   \n",
+       "5                             Jeerinah_Formation   \n",
+       "6                              Pyradie_Formation   \n",
+       "7                             Woongarra_Rhyolite   \n",
+       "8                     Marra_Mamba_Iron_Formation   \n",
+       "9   Mount_McRae_Shale_and_Mount_Sylvia_Formation   \n",
+       "10                           Wittenoom_Formation   \n",
+       "\n",
+       "    ThicknessCalculatorFixed_mean  \n",
+       "0                              50  \n",
+       "1                              50  \n",
+       "2                              50  \n",
+       "3                              50  \n",
+       "4                              50  \n",
+       "5                              50  \n",
+       "6                              50  \n",
+       "7                              50  \n",
+       "8                              50  \n",
+       "9                              50  \n",
+       "10                             50  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "print(proj.stratigraphic_column.stratigraphicUnits[['name','thickness']])"
+    "proj.stratigraphic_column.stratigraphicUnits[['name', 'ThicknessCalculatorFixed_mean']]"
    ]
   },
   {
@@ -195,7 +342,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
